bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "46ffd1f8f7d25aeead4cec31833ffb05e518b89b",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "abseil-cpp", version = "20230802.0")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.6.0")
bazel_dep(name = "google_benchmark", version = "1.8.3")
bazel_dep(name = "googletest", version = "1.14.0")
